--- a/src/frontend/src/styles/index.css
+++ b/src/frontend/src/styles/index.css
@@ -19,7 +19,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f6f6f6;
 }
 
 h1 {
@@ -40,7 +40,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
 button:focus,
 button:focus-visible {
